Заменены Accessors на SuperBuilder. Исправлены тесты. Документация отредактирована в соответствии с изменениями.